# rust.study

./: .gitignore  ALL.md  Cargo.toml  Flutter.md  Iroh.md  MAC.md  README.md  Rsbuild.md  SECURITY.md  Solid.md  Windows.md  chatly-release.jks  iOS.md  linux.md  macos.md  rspios.md  安卓.md  签名.md
.github/bak/: chatly-android.yml  chatly-linux.yml  chatly-windows.yml
.github/workflows/: android-app2.yml  android.yml  chatly-android.yml  chatly-iOS.yml  chatly-linux.yml  chatly-macos.yml  chatly-rspi.yml  chatly-windows.yml  main.yml
app1/: package-lock.json  package.json  pnpm-lock.yaml  rsbuild.config.js
app1/src/: App.jsx
app1/src-tauri/: Cargo.toml  tauri.conf.json
app1/src-tauri/capabilities/: default.json
app1/src/hooks/: dateTimeUtils.js  index.js  useWinSize.jsx
app2/: package.json  rsbuild.config.js
app2/friends/: package-lock.json  rsbuild.config.js
app2/public/: index.html
app2/src/: App.jsx
app2/src-tauri/: Cargo.toml  tauri.conf.json
app2/src-tauri/src/: lib.rs  (+1 more)
app3/: package.json
app3/src-tauri/: Cargo.toml  tauri.conf.json
app4/friends/: package.json
app4/src-tauri/: tauri.conf.json
caddy/: Caddyfile  docker-compose.yml
chat/: Cargo.toml  Dockerfile  README.md
chat/config/: db.ini
chat/src/: config.rs  main.rs
chat/src/chat/: amq.rs  jwt.rs  mod.rs
chat/src/utils/: answer.rs
chatly/: package.json  pnpm-lock.yaml  rsbuild.config.js  vite.config.js
chatly/public/: encoderWorker.min.js  index.html  voice-processor.js
chatly/src/: App.jsx  Avatar.module.css  index.jsx  theme.jsx
chatly/src-tauri/: Cargo.toml  Info.plist  tauri.conf copy.json  tauri.conf.json
chatly/src-tauri/capabilities/: default.json
chatly/src-tauri/src/: audio_transport.rs  lib.rs  main.rs  quic_commands.rs  quic_transport.rs
chatly/src-tauri/src/p2p/: mod.rs  p2p_commands.rs  p2p_state_voice.rs  p2p_state_voice3.rs  p2p_transport.rs
chatly/src-tauri/src/quic/: mod.rs  quic_commands copy.rs  quic_commands.rs  quic_transport copy.rs  quic_transport.rs
chatly/src-tauri/src/stream/: mod.rs  p2p_commands.rs  stream.rs
chatly2/: package.json  pnpm-lock.yaml  rsbuild.config.js
chatly2/src/: App.jsx  index.jsx
chatly2/src-tauri/: Cargo.toml  tauri.conf.json
chatly3/: package.json
chatly3/src/: App.jsx
chatly3/src-tauri/: Cargo.toml
chatly4/: package.json
chatly4/src/: App.jsx  Avatar.jsx  useImages4.jsx
chatly4/src-tauri/: Cargo.toml  tauri.conf.json
dev/: android.md  ios.md  linux.md
docker/app1/: index.html
docker/caddy/: docker-compose.yml
godot/: README.md
godot/godot_udp2udp_server/: README.md
godot/godot_udp2udp_server/client/: Cargo.toml
godot/godot_udp2udp_server/client/src/: lib.rs
godot/godot_udp2udp_server/client/src/apple/conf/: ipadd.rs  mod.rs
godot/godot_udp2udp_server/client/src/apple/udp_channel/: data.rs  mod.rs
godot/godot_udp2udp_server/client/src/udp/: domain.rs  room.rs  start.rs
godot/godot_未完成/: README.md
godot/godot_未完成/server/: Cargo.toml
godot/godot_未完成/server/.cargo/: config
godot/godot_未完成/server/src/apple/: mod.rs
godot/godot_未完成/server/src/apple/model/: room.rs  stats.rs
godot/godot_未完成/server/src/apple/utils/: answer.rs  mod.rs
godot/godot_未完成/server/src/apple/utils/helper/: mod.rs
godot/godot_未完成/server/src/web/: user.rs
godot_udp2udp_server/server/: Dockerfile  README.md
godot_未完成/server/: Dockerfile
images/: README.md
images/actix/: .gitignore  Cargo.toml  Dockerfile  README.md
images/axum/: .gitignore  Cargo.toml  Dockerfile
images/axum/src/: main.rs
images/axum/src/apple/: mod.rs
images/axum/src/apple/conf/: files.rs  mod.rs  web.rs
images/axum/src/apple/utils/: answer.rs
myiroh/: Cargo.toml  iroh.md
myiroh/src/: client.rs  lib.rs  server.rs
mylib/: study.md
mytest/: study.md
mytest/src/: lib.rs  test_function.rs  test_ifelse.rs  test_iterator.rs  test_loops.rs  test_struct.rs
ping-pong/: Cargo.toml
ping-pong/src/: main.rs
std_iroh/: Cargo.toml  study.md
std_iroh/src/: main.rs  ping.rs
std_iroh/src/datagram/: client.rs  server.rs
std_iroh/src/stream/: channel.rs  mod.rs  p2p_commands.rs  stream copy.rs  stream.rs
study/: 1、Linux环境搭建.md  1、Tauri与Rust的通讯.md  2、.md  Cargo.toml  android.md  ios.md  linux.md  macos.md  tokio.md  windows.md
study/src/: main.rs
tauri-app/src-tauri/: tauri.conf.json
test/: package.json  pnpm-lock.yaml
test.tauri/: README.md
test.tauri/app/: README.md  package.json
test.tauri/study/: 1、Linux环境搭建.md  2、项目搭建.md  3、tauri.conf.json配置.md
test.tauri/test-tokio-modbus/: Cargo.toml
test/src/: App.jsx
test/src-tauri/: Cargo.toml  tauri.conf.json
web/: jsconfig.json  package.json  pnpm-lock.yaml
(+801 files in other folders)
