[package]
name = "chat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
actix-web = "3"
serde = "1"
serde_json = "1"
chrono = "0.4.19"
jwts = "0.2.3"
bincode = "1.3.3"
amiquip = { version = "0.4", default-features = false }
configparser = "3"