[package]
name = "std_iroh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tauri = { version = "2.10.3" }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "sync",
] }
# flume = "0.12.0"
iroh = "0.97.0"
iroh-ping = "0.9.0"
iroh-tickets = "0.4.0"
bytes = "1.5"
serde = { version = "1", features = ["derive"] }