[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"

tokio = { version = "1", features = ["full"] }
bytes = "1"
futures = "0.3"

quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"

libp2p = { version = "0.53", features = [
  "tcp",
  "noise",
  "yamux",
  "tokio",
  "macros",
  "identify",
  "ping",
  "relay",
  "dcutr",
  "mdns",
  "request-response",
  "autonat",
  "upnp",
  "dns",
  "websocket"
] }

tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
