[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Shaun"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"

tokio = { version = "1", features = ["full"] }
bytes = "1"
futures = "0.3"

quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"

iroh = "0.97"
iroh-tickets = "0.4.0"
iroh-ping = "0.9.0"

tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"

