[package]
name = "imgs"
version = "0.1.0"
edition = "2021"


[dependencies]
configparser="*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
axum =  {version = "0.5.13", features = ["multipart","headers"] }
tokio = { version = "1.0", features = ["full"]}
futures = "0.3"
tokio-stream = "0.1"
md5 = "0.7.0"
base64 = "0.13.0"
bytes = { version = "1", features = ["serde"] }
regex = "1.5"