[package]
name = "test001"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
chashmap = "2.2.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
gdnative = {version = "0.10.0",features = ["async"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
flume = "0.10.12"
spin = "0.9.3"
md5 = "*"
