[package]
name = "godot_server"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = "0.3"
configparser = "*"
tokio = { version = "1", features = ["full"] }
mongodb = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
axum = "0.5.1"
chrono = "*"
lazy_static="*"
flume = "0.10.12"
spin ="*"
bson="*"


